# clipper

./: .gitignore  Makefile  README.md  pyproject.toml
clipper/: __init__.py  actions.py  audit.py  flipper.py  main.py  mcp.py  rpc.py  safety.py
clipper/hardware/: __init__.py  badusb.py  device.py  feedback.py  gpio.py  ibutton.py  ir.py  loader.py  mfkey.py  nfc.py  power.py  rfid.py  storage.py  subghz.py
scripts/: clipper-mcp-stdio.sh
tests/: conftest.py  test_actions.py  test_audit_redaction.py  test_bounded_command.py  test_device_diagnostics.py  test_disconnect_errno6.py  test_flipper_connect.py  test_flipper_exclusive_serial.py  test_flipper_rpc_request.py  test_hardware_actions.py  test_ibutton_emulate.py  test_loader.py  test_mcp.py  test_mfkey.py  test_power.py  test_read_retry.py  test_reboot_reconnect.py  test_rfid_emulate.py  test_rpc.py  test_safety_frequency.py  test_safety_gate.py  test_safety_gate_refactor.py  test_serial_handoff.py  test_storage.py  test_storage_path_validation.py  test_subghz_rx_replay.py
tests/fixtures/mfkey/: README.md  expected_keys.json
