[project]
name = "clipper"
version = "0.1.0"
description = "MCP server that drives a Flipper Zero over USB serial, exposing its hardware as native tools for Claude and other MCP clients."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Gage Nichols", email = "18178876+Realgagenichols@users.noreply.github.com" },
]
keywords = ["flipper-zero", "mcp", "model-context-protocol", "claude", "rfid", "nfc", "subghz"]
dependencies = [
    "pyserial>=3.5,<4",
    "pydantic>=2.9,<3",
    "mcp>=1.0,<2",
    "anyio>=4.6,<5",
]

[project.scripts]
clipper = "clipper.main:main"

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "regression: tests for previously caught bugs",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clipper"]
